--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
 			<div class="brand">FME Server<span class="hidden-tiny"> Demos</span></div>	 
 			<div class="nav-collapse collapse">
 				<a href="https://github.com/safesoftware/fmepedia-404" class="btn">
-					<img src="libs/github.png"> Fork GitHub
+					<img src="libs/GitHub.png"> Fork GitHub
 				</a>
 				<a href="https://github.com/safesoftware/fmepedia-404/archive/master.zip" class="btn">
 					<i class="icon-download-alt"></i> Download Zip
