--- a/www/index.html
+++ b/www/index.html
@@ -6,16 +6,16 @@
 	<!-- http://www.safe.com -->
 	<title>404 - Demo not found</title>
 	<!-- JQuery -->
-	<script src="libs/jquery-1.10.1.js"></script>
+	<script src="http://demos.fmeserver.com/fmepedia-404/libs/jquery-1.10.1.js"></script>
 	<!-- Bootstrap -->
 	<!--http://getbootstrap.com/2.3.2/-->
-	<script src="libs/bootstrap/js/bootstrap.js"></script>
-	<link href="libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+	<script src="http://demos.fmeserver.com/fmepedia-404/libs/bootstrap/js/bootstrap.js"></script>
+	<link href="http://demos.fmeserver.com/fmepedia-404/libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+	<link href="http://demos.fmeserver.com/fmepedia-404/libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 	
 	<!-- Stylesheet for demo/tutorial -->
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="http://demos.fmeserver.com/fmepedia-404/css/index.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
 			<div class="brand">FME Server<span class="hidden-tiny"> Demos</span></div>	 
 			<div class="nav-collapse collapse">
 				<a href="https://github.com/safesoftware/fmepedia-404" class="btn">
-					<img src="libs/GitHub.png"> Fork GitHub
+					<img src="http://demos.fmeserver.com/fmepedia-404/libs/GitHub.png"> Fork GitHub
 				</a>
 				<a href="https://github.com/safesoftware/fmepedia-404/archive/master.zip" class="btn">
 					<i class="icon-download-alt"></i> Download Zip
@@ -42,7 +42,7 @@
 	</div>
 	<div class="container">
 		<div class="hero-unit" align="center">
-			<h1>404 - Demo not found <img src="libs/lizard.png" width="100px" style="vertical-align:bottom"></h1>
+			<h1>404 - Demo not found <img src="http://demos.fmeserver.com/fmepedia-404/libs/lizard.png" width="100px" style="vertical-align:bottom"></h1>
 		</div>
 		<!-- Example row of columns -->
 		<div class="row">
